# avalang

./: .gitignore  AGENTS.md  CMakeLists.txt  DESIGN.md  INSTRUCCIONES.md  PROGRESS.md  README.md  SYNTAX_DESIGN.md  build.bat  build_studio.bat  install.bat  install_studio.bat
bindings/csharp/: AvaLang.sln  BINDING_CSHARP_PROGRESS.md  README.md  README_INTEROP.md
bindings/csharp/AvaLang.ConsoleDemo/: AvaLang.ConsoleDemo.csproj  Program.cs
bindings/csharp/AvaLang.ConsoleDemo/scripts/: player.ava
bindings/csharp/AvaLang.Interop/: AvaGameAPI.cs  AvaLang.Interop.csproj  AvaLangManager.cs  AvaVM.cs  AvaValue.cs  NativeMethods.cs
bindings/csharp/AvaLang.Tests/: AvaLang.Tests.csproj  Program.cs
bindings/csharp/AvaLang.Tests/scripts/: 01_arithmetic.ava  02_control_flow.ava  03_functions_closures.ava  04_list_dict_for.ava  05_native_callback.ava
bindings/java/: README.md
bindings/python/: README.md
core/src/ast/: ast.h  ast_builder.cpp  ast_builder.h
core/src/builtins/: builtin.h  builtin_coroutine.cpp  builtin_init.cpp  builtin_natives.cpp  builtin_natives.h  builtin_registry.cpp  builtin_strings.cpp
core/src/compiler/: compiler.cpp  compiler.h
core/src/frontend/: denter.cpp  denter.h  frontend_antlr.cpp
core/src/ui/: builtins.cpp  builtins.h  component.cpp  component.h  event.cpp  layout.cpp  layout.h  property.cpp  registry.cpp  registry.h  tree.cpp  tree.h
core/src/vm/: closure.h  coroutine.h  module.cpp  module.h  opcodes.h  value.cpp  value.h  vm.cpp
docs/: README.md  architecture.md  builtins.md  classes.md  control-flow.md  coroutines.md  dict-methods.md  exceptions.md  fstrings.md  functions.md  list-methods.md  opcodes.md  operators.md  string-methods.md  types.md
docs/architecture/: 07_COMPONENT_TREE.md  BINDING_ARCHITECTURE_GUIDE.md  DSL_VISION.md  SYNTAX_DESIGN.md
grammar/: AvaLang.g4
include/: ava.h
public/include/: avalang.h  avalang_plugin.h
public/src/: c_api.cpp  main.cpp
scripts/: test2.ava  test3.ava  test4.ava  test5.ava  test6.ava  test7.ava  test_arithmetic.ava  test_augassign.ava  test_augassign_debug.ava  test_base_simple.ava  test_builtins.ava  test_class_inherit.ava  test_class_multilevel.ava  test_control_flow.ava  test_coro2.ava  test_coro3.ava  test_coro4.ava  test_coro5.ava  test_coro_basic.ava  test_coro_in_func.ava  test_coro_inside_for.ava  test_coro_isolate.ava  test_coro_loop.ava  test_coro_manual.ava  test_coro_manual_list.ava  test_coro_min.ava  test_coro_multi.ava  test_coro_simple.ava  test_coro_simple2.ava  test_coro_simple_for.ava  test_coro_vs_for.ava  test_coro_while.ava  test_coroutine_nested.ava  test_dead_coro.ava  test_debug.ava  test_debug2.ava  test_debug_base.ava  test_debug_inherit.ava  test_debug_print.ava  test_debug_slice.ava  (+62 more)
scripts/math/: utils.ava
src/api/: c_api.cpp
src/ast/: ast.h  ast_builder.cpp  ast_builder.h
src/builtins/: builtin.h  builtin_dicts.cpp  builtin_lists.cpp  builtin_registry.cpp
src/cli/: main.cpp
src/compiler/: compiler.cpp  compiler.h
src/frontend/: frontend.h  frontend_antlr.cpp  frontend_stub.cpp
src/vm/: coroutine.cpp  coroutine.h  opcodes.h  proto.h  value.h  vm.cpp  vm.h
studio/: CMakeLists.txt
studio/src/: main.cpp
studio/src/engine/: engine_bridge.cpp  engine_bridge.h
studio/src/panels/: editor_panel.cpp  editor_panel.h  explorer_panel.cpp  explorer_panel.h  output_panel.cpp  output_panel.h  preview_panel.cpp  preview_panel.h  properties_panel.cpp  properties_panel.h
